packages/jsii/test/negatives/neg.internal-underscore-interface.1.ts
export interface IMyInterface {
  /** @internal */
  propertyWithInternalButNotUnderscorePrefix: string;
}
